care/force-app/main/default/objects/Survey_Feedback__c/Survey_Feedback__c.object-meta.xml
<CustomObject>
    <label>Survey Feedback</label>
    <nameField>
        <label>Survey Feedback Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Survey Feedbacks</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>