care/force-app/main/default/objects/Survey_Feedback__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Survey Feedbacks</relationshipLabel>
    <relationshipName>Survey_Feedbacks</relationshipName>
    <type>Lookup</type>
</CustomField>