care/force-app/main/default/objects/Survey_Feedback__c/fields/Action_1__c.field-meta.xml
<CustomField>
    <fullName>Action_1__c</fullName>
    <label>Action 1</label>
    <length>100</length>
    <type>Text</type>
</CustomField>