care/force-app/main/default/objects/Survey_Feedback__c/fields/Action_1_Value__c.field-meta.xml
<CustomField>
    <fullName>Action_1_Value__c</fullName>
    <label>Action 1 Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>