care/force-app/main/default/objects/Survey_Feedback__c/fields/Action_2__c.field-meta.xml
<CustomField>
    <fullName>Action_2__c</fullName>
    <label>Action 2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>