care/force-app/main/default/objects/Survey_Feedback__c/fields/Action_3__c.field-meta.xml
<CustomField>
    <fullName>Action_3__c</fullName>
    <label>Action 3</label>
    <length>100</length>
    <type>Text</type>
</CustomField>