care/force-app/main/default/objects/Survey_Feedback__c/fields/Actions_Taken__c.field-meta.xml
<CustomField>
    <fullName>Actions_Taken__c</fullName>
    <description>Created as part of SFORCE-3306
2962 - Configure Survey Feedbacks</description>
    <inlineHelpText>Indicate actions taken, i.e. cleared cookies, logged out and in, incognito, delete and reinstall, other browsers, etc.</inlineHelpText>
    <label>Actions Taken</label>
    <type>TextArea</type>
</CustomField>