care/force-app/main/default/objects/Survey_Feedback__c/fields/Addl_Services_to_make_your_exp_better__c.field-meta.xml
<CustomField>
    <fullName>Addl_Services_to_make_your_exp_better__c</fullName>
    <description>SFORCE-3167
Update SCP Survey in Clicktools &amp; Salesforce</description>
    <inlineHelpText>Is there anything we could have done, or additional services we could offer to make your experience better?</inlineHelpText>
    <label>Addl Services to make your exp better</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>