care/force-app/main/default/objects/Survey_Feedback__c/fields/Adequate_number_of_providers__c.field-meta.xml
<CustomField>
    <fullName>Adequate_number_of_providers__c</fullName>
    <complianceGroup>CCPA</complianceGroup>
    <description>Survey answer for the adequate number of providers?</description>
    <label>Adequate number of providers?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>I would have liked more provider options.</fullName>
            </value>
            <value>
                <fullName>The number of provider options was adequate.</fullName>
            </value>
            <value>
                <fullName>The number of provider options was too many.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>