care/force-app/main/default/objects/Survey_Feedback__c/fields/Advantage_of_Other_Benefits__c.field-meta.xml
<CustomField>
    <fullName>Advantage_of_Other_Benefits__c</fullName>
    <description>Field used for Lifecare LEAVECOACH Survey</description>
    <inlineHelpText>As a result of working with the Coach did you take advantage of other relevant company sponsored benefit programs?</inlineHelpText>
    <label>Advantage of Other Benefits ?</label>
    <length>25</length>
    <type>Text</type>
</CustomField>