care/force-app/main/default/objects/Survey_Feedback__c/fields/Agent_CSAT_Rating__c.field-meta.xml
<CustomField>
    <fullName>Agent_CSAT_Rating__c</fullName>
    <description>{Agent first name}, the Member Care representative, made it easy to address my issue.</description>
    <inlineHelpText>{Agent first name}, the Member Care representative, made it easy to address my issue.</inlineHelpText>
    <label>Agent CSAT Rating</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Very Good</fullName>
            </value>
            <value>
                <fullName>Good</fullName>
            </value>
            <value>
                <fullName>Neutral</fullName>
            </value>
            <value>
                <fullName>Bad</fullName>
            </value>
            <value>
                <fullName>Very Bad</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>