care/force-app/main/default/objects/Survey_Feedback__c/fields/Agent_CSAT_Rating_Score__c.field-meta.xml
<CustomField>
    <fullName>Agent_CSAT_Rating_Score__c</fullName>
    <formula>CASE(Agent_CSAT_Rating__c, 
					&quot;Very Good&quot;, 4,
					&quot;Good&quot;, 3,
					&quot;Neutral&quot;, 2,
					&quot;Bad&quot;, 1,
					&quot;Very Bad&quot;, 0, null)</formula>
    <inlineHelpText>Calculates Score based on Agent CSAT Rating for Member Care Closed Case Surveys, where Very Good = 4, Good = 3, Neutral = 2, Bad = 1, and Very Bad = 0.</inlineHelpText>
    <label>Agent CSAT Rating Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>