care/force-app/main/default/objects/Survey_Feedback__c/fields/Agent_CSAT_Rating_Senior_Care__c.field-meta.xml
<CustomField>
    <fullName>Agent_CSAT_Rating_Senior_Care__c</fullName>
    <formula>CASE(Agent_CSAT_Rating__c,
&quot;Very Good&quot;, 4,
&quot;Good&quot;, 3,
&quot;Neutral&quot;, 2,
&quot;Bad&quot;, 1,
&quot;Very Bad&quot;, 0, null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Agent CSAT Rating(Senior Care)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>