care/force-app/main/default/objects/Survey_Feedback__c/fields/Agent_experience_Favorable__c.field-meta.xml
<CustomField>
    <fullName>Agent_experience_Favorable__c</fullName>
    <description>What made your experience with {AGENT NAME} favorable?</description>
    <inlineHelpText>What made your experience with {AGENT NAME} favorable?</inlineHelpText>
    <label>Agent experience Favorable</label>
    <length>255</length>
    <type>Text</type>
</CustomField>