care/force-app/main/default/objects/Survey_Feedback__c/fields/Agent_experience_unfavorable__c.field-meta.xml
<CustomField>
    <fullName>Agent_experience_unfavorable__c</fullName>
    <description>What made your experience with {AGENT NAME} unfavorable?</description>
    <inlineHelpText>What made your experience with {AGENT NAME} unfavorable?</inlineHelpText>
    <label>Agent experience unfavorable</label>
    <length>255</length>
    <type>Text</type>
</CustomField>