care/force-app/main/default/objects/Survey_Feedback__c/fields/Anticipate_using_service_again__c.field-meta.xml
<CustomField>
    <fullName>Anticipate_using_service_again__c</fullName>
    <description>added for SFORCE-2425 BUC Surveys</description>
    <inlineHelpText>Q: Do you anticipate using our service again?</inlineHelpText>
    <label>Do you anticipate using service again?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>