care/force-app/main/default/objects/Survey_Feedback__c/fields/Assign_To__c.field-meta.xml
<CustomField>
    <fullName>Assign_To__c</fullName>
    <businessOwnerGroup>LifeCare_QA</businessOwnerGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Assign the QA member who is working thru this Survey Feedback.</description>
    <inlineHelpText>Assign the QA member who is working thru this Survey Feedback.</inlineHelpText>
    <label>Assign To</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Please Assign to the Active User Only.</errorMessage>
        <filterItems>
            <field>User.IsActive</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Survey_Feedbacks</relationshipName>
    <type>Lookup</type>
</CustomField>