care/force-app/main/default/objects/Survey_Feedback__c/fields/Aware_of_other_options_available__c.field-meta.xml
<CustomField>
    <fullName>Aware_of_other_options_available__c</fullName>
    <description>added for SFORCE-2425 BUC Surveys</description>
    <inlineHelpText>Q: Are you aware of the other options available to Googlers, such as the ability to use sick time to care for dependents or work flexibility?</inlineHelpText>
    <label>Aware of the other options available?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>