care/force-app/main/default/objects/Survey_Feedback__c/fields/Browsers_and_Versions__c.field-meta.xml
<CustomField>
    <fullName>Browsers_and_Versions__c</fullName>
    <description>Created as part of SFORCE-3306
2962 - Configure Survey Feedbacks</description>
    <inlineHelpText>Indicate which browser and browser version being used when bug experienced, i.e. Chrome, Firefox, Internet Explorer, Safari, etc.</inlineHelpText>
    <label>Browsers and Versions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>