care/force-app/main/default/objects/Survey_Feedback__c/fields/BUC_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>BUC_Account_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used to connect US Seeker Account to BUC Surveys. Added for SFORCE-2425</description>
    <inlineHelpText>Account Id of the BUC Member .</inlineHelpText>
    <label>BUC Account ID</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>BUC Survey Feedbacks</relationshipLabel>
    <relationshipName>BUC_Survey_Feedbacks</relationshipName>
    <type>Lookup</type>
</CustomField>