care/force-app/main/default/objects/Survey_Feedback__c/fields/BUC_Job_ID__c.field-meta.xml
<CustomField>
    <fullName>BUC_Job_ID__c</fullName>
    <description>Job ID from Iterable, added for SFORCE-2425 BUC Surveys</description>
    <label>BUC Job ID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>