care/force-app/main/default/objects/Survey_Feedback__c/fields/BUC_Survey_Type__c.field-meta.xml
<CustomField>
    <fullName>BUC_Survey_Type__c</fullName>
    <description>added for SFORCE-2425 BUC Surveys</description>
    <inlineHelpText>The type of BUC survey filled out by the member.</inlineHelpText>
    <label>BUC Survey Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Fulfilled</fullName>
            </value>
            <value>
                <fullName>Unfulfilled</fullName>
            </value>
            <value>
                <fullName>Micro</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>