care/force-app/main/default/objects/Survey_Feedback__c/fields/Bucket__c.field-meta.xml
<CustomField>
    <fullName>Bucket__c</fullName>
    <label>Bucket</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Contact_Theme</valueSetName>
    </valueSet>
</CustomField>