care/force-app/main/default/objects/Survey_Feedback__c/fields/Bug__c.field-meta.xml
<CustomField>
    <fullName>Bug__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created as part of SFORCE-3306
2962 - Configure Survey Feedbacks</description>
    <label>Bug</label>
    <type>Checkbox</type>
</CustomField>