care/force-app/main/default/objects/Survey_Feedback__c/fields/Bug_Summary__c.field-meta.xml
<CustomField>
    <fullName>Bug_Summary__c</fullName>
    <description>Created as part of SFORCE-3306
2962 - Configure Survey Feedbacks</description>
    <label>Bug Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>