care/force-app/main/default/objects/Survey_Feedback__c/fields/Business_Model__c.field-meta.xml
<CustomField>
    <fullName>Business_Model__c</fullName>
    <label>Business Model</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Subscription</fullName>
            </value>
            <value>
                <fullName>Hybrid 1</fullName>
            </value>
            <value>
                <fullName>Hybrid 2</fullName>
            </value>
            <value>
                <fullName>Transaction</fullName>
            </value>
            <value>
                <fullName>GBB</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>