care/force-app/main/default/objects/Survey_Feedback__c/fields/CallSurvey_MC_Survey_1__c.field-meta.xml
<CustomField>
    <fullName>CallSurvey_MC_Survey_1__c</fullName>
    <inlineHelpText>How likely are you to recommend Care to a friend or colleague?

On a scale of 0 to 10, please press 0 is “Not at all Likely” and 10 is “Extremely Likely” For 10, please press *</inlineHelpText>
    <label>CallSurvey.MC Survey 1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>