care/force-app/main/default/objects/Survey_Feedback__c/fields/CallSurvey_MC_Survey_2__c.field-meta.xml
<CustomField>
    <fullName>CallSurvey_MC_Survey_2__c</fullName>
    <inlineHelpText>Overall how would you rate your interaction with AGENT?</inlineHelpText>
    <label>CallSurvey.MC Survey 2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>