care/force-app/main/default/objects/Survey_Feedback__c/fields/CallSurvey_MC_Survey_3__c.field-meta.xml
<CustomField>
    <fullName>CallSurvey_MC_Survey_3__c</fullName>
    <inlineHelpText>Did AGENT make you feel valued as a customer?</inlineHelpText>
    <label>CallSurvey.MC Survey 3</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>