care/force-app/main/default/objects/Survey_Feedback__c/fields/Care_Specialist__c.field-meta.xml
<CustomField>
    <fullName>Care_Specialist__c</fullName>
    <complianceGroup>CCPA</complianceGroup>
    <label>Care Specialist</label>
    <length>50</length>
    <type>Text</type>
</CustomField>