care/force-app/main/default/objects/Survey_Feedback__c/fields/Care_Type__c.field-meta.xml
<CustomField>
    <fullName>Care_Type__c</fullName>
    <description>BUC Care Type, added for SFORCE-2425 BUC Surveys</description>
    <label>Care Type</label>
    <length>40</length>
    <type>Text</type>
</CustomField>