care/force-app/main/default/objects/Survey_Feedback__c/fields/Carecom_first_choice__c.field-meta.xml
<CustomField>
    <fullName>Carecom_first_choice__c</fullName>
    <description>added for SFORCE-2425 BUC Surveys</description>
    <inlineHelpText>Q: Was Care.com your first choice of care in this situation?</inlineHelpText>
    <label>Was Care.com your first choice of care?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>