care/force-app/main/default/objects/Survey_Feedback__c/fields/Case_Member_Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Case_Member_Account_Type__c</fullName>
    <label>Case Member Account Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>