care/force-app/main/default/objects/Survey_Feedback__c/fields/Case_Owner_is_active__c.field-meta.xml
<CustomField>
    <fullName>Case_Owner_is_active__c</fullName>
    <formula>Case__r.Owner:User.IsActive</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Owner is active</label>
    <type>Checkbox</type>
</CustomField>