care/force-app/main/default/objects/Survey_Feedback__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Feedback Category</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Bucket__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account Management</fullName>
            </value>
            <value>
                <fullName>Autorenewal</fullName>
            </value>
            <value>
                <fullName>Brand/Reputation</fullName>
            </value>
            <value>
                <fullName>Care Check</fullName>
            </value>
            <value>
                <fullName>Care@Work</fullName>
            </value>
            <value>
                <fullName>Communication</fullName>
            </value>
            <value>
                <fullName>Concerns/Safety Incidents</fullName>
            </value>
            <value>
                <fullName>COVID-19</fullName>
            </value>
            <value>
                <fullName>Data Security/Privacy</fullName>
            </value>
            <value>
                <fullName>Enrollment/Account Creation</fullName>
            </value>
            <value>
                <fullName>Hiring Tools</fullName>
            </value>
            <value>
                <fullName>iOS Subscriptions</fullName>
            </value>
            <value>
                <fullName>Job Management</fullName>
            </value>
            <value>
                <fullName>Marketing and Admin Communication</fullName>
            </value>
            <value>
                <fullName>Matching Quality</fullName>
            </value>
            <value>
                <fullName>Message Masking</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Payment Options</fullName>
            </value>
            <value>
                <fullName>Policy/Procedure?</fullName>
            </value>
            <value>
                <fullName>Post-Match Features</fullName>
            </value>
            <value>
                <fullName>Price</fullName>
            </value>
            <value>
                <fullName>Profile Management</fullName>
            </value>
            <value>
                <fullName>Quality of Applicants</fullName>
            </value>
            <value>
                <fullName>Quality of Jobs/Seekers</fullName>
            </value>
            <value>
                <fullName>Quantity of Applicants</fullName>
            </value>
            <value>
                <fullName>Quantity of Jobs</fullName>
            </value>
            <value>
                <fullName>Resolution</fullName>
            </value>
            <value>
                <fullName>Reviews</fullName>
            </value>
            <value>
                <fullName>Safety Communication</fullName>
            </value>
            <value>
                <fullName>Safety Tools</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>