care/force-app/main/default/objects/Survey_Feedback__c/fields/Center_Caregiver_Name__c.field-meta.xml
<CustomField>
    <fullName>Center_Caregiver_Name__c</fullName>
    <description>Name of BUC Center or Caregiver, added for SFORCE-2425 BUC Surveys</description>
    <label>Center or Caregiver Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>