care/force-app/main/default/objects/Survey_Feedback__c/fields/Coach_Impact__c.field-meta.xml
<CustomField>
    <fullName>Coach_Impact__c</fullName>
    <description>Field used for Lifecare LEAVECOACH Survey.</description>
    <inlineHelpText>Did your experience with the Coach positively impact your view of your employer as an employer of choice?</inlineHelpText>
    <label>Coach Impact</label>
    <length>25</length>
    <type>Text</type>
</CustomField>