care/force-app/main/default/objects/Survey_Feedback__c/fields/Competitor_Mentioned__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Mentioned__c</fullName>
    <label>Competitor Mentioned?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Angie&apos;s List</fullName>
            </value>
            <value>
                <fullName>Sittercity</fullName>
            </value>
            <value>
                <fullName>Nextdoor</fullName>
            </value>
            <value>
                <fullName>Urban Sitter</fullName>
            </value>
            <value>
                <fullName>Craigslist</fullName>
            </value>
            <value>
                <fullName>Rover</fullName>
            </value>
            <value>
                <fullName>Handy</fullName>
            </value>
            <value>
                <fullName>Thumbtack</fullName>
            </value>
            <value>
                <fullName>TaskRabbit</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>