care/force-app/main/default/objects/Survey_Feedback__c/fields/CSAT_Comments__c.field-meta.xml
<CustomField>
    <fullName>CSAT_Comments__c</fullName>
    <label>CSAT Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>