care/force-app/main/default/objects/Survey_Feedback__c/fields/CSAT_Rating__c.field-meta.xml
<CustomField>
    <fullName>CSAT_Rating__c</fullName>
    <complianceGroup>CCPA</complianceGroup>
    <description>Servicing teams satisfaction question</description>
    <label>CSAT Rating</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>I am very satisfied – You answered my question in a fast, friendly way.</fullName>
            </value>
            <value>
                <fullName>I am satisfied – You were helpful, but this could have been better.</fullName>
            </value>
            <value>
                <fullName>I am not satisfied – You didn’t provide the help I needed. I expected more.</fullName>
            </value>
            <value>
                <fullName>Extremely Satisfied</fullName>
            </value>
            <value>
                <fullName>Somewhat Satisfied</fullName>
            </value>
            <value>
                <fullName>Neutral</fullName>
            </value>
            <value>
                <fullName>Somewhat Dissatisfied</fullName>
            </value>
            <value>
                <fullName>Extremely Dissatisfied</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>