care/force-app/main/default/objects/Survey_Feedback__c/fields/CSAT_Source__c.field-meta.xml
<CustomField>
    <fullName>CSAT_Source__c</fullName>
    <inlineHelpText>Source of the CSAT Survey(Email or Chat)</inlineHelpText>
    <label>CSAT Source</label>
    <length>40</length>
    <type>Text</type>
</CustomField>