care/force-app/main/default/objects/Survey_Feedback__c/fields/Date_of_Care__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Care__c</fullName>
    <description>Date the care took place, added for SFORCE-2425 BUC Surveys</description>
    <label>Job Date/Date of Care</label>
    <type>Date</type>
</CustomField>