care/force-app/main/default/objects/Survey_Feedback__c/fields/Date_Suspicious_Communication_Receive__c.field-meta.xml
<CustomField>
    <fullName>Date_Suspicious_Communication_Receive__c</fullName>
    <description>Security/IT/Safety teams launching a Fraud Follow up survey to capture additional information on cases where the member has reported fraud. Sforce - 1634</description>
    <label>Date Suspicious Communication Receive</label>
    <type>Date</type>
</CustomField>