care/force-app/main/default/objects/Survey_Feedback__c/fields/Detractors__c.field-meta.xml
<CustomField>
    <fullName>Detractors__c</fullName>
    <formula>IF(AND(NPS_Score__c&gt;=0,NPS_Score__c  &lt; 7), 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Detractors</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>