care/force-app/main/default/objects/Survey_Feedback__c/fields/Device_Specific__c.field-meta.xml
<CustomField>
    <fullName>Device_Specific__c</fullName>
    <label>Device Specific?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Desktop</fullName>
            </value>
            <value>
                <fullName>Mobile Web</fullName>
            </value>
            <value>
                <fullName>iOS App</fullName>
            </value>
            <value>
                <fullName>Android App</fullName>
            </value>
            <value>
                <fullName>Date Night</fullName>
            </value>
            <value>
                <fullName>Spot App</fullName>
            </value>
            <value>
                <fullName>Care@Work App</fullName>
            </value>
            <value>
                <fullName>Caregiver App iOS</fullName>
            </value>
            <value>
                <fullName>Caregiver App Android</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>