care/force-app/main/default/objects/Survey_Feedback__c/fields/Did_agent_make_you_feel_valued__c.field-meta.xml
<CustomField>
    <fullName>Did_agent_make_you_feel_valued__c</fullName>
    <description>Did {Agent first name] make you feel valued as a customer?</description>
    <inlineHelpText>Did {Agent first name] make you feel valued as a customer?</inlineHelpText>
    <label>Did agent make you feel valued?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>