care/force-app/main/default/objects/Survey_Feedback__c/fields/Did_caregiver_follow_instructions__c.field-meta.xml
<CustomField>
    <fullName>Did_caregiver_follow_instructions__c</fullName>
    <complianceGroup>CCPA</complianceGroup>
    <description>added for SFORCE-2425 BUC Surveys</description>
    <inlineHelpText>Q: Did your caregiver follow your instructions?</inlineHelpText>
    <label>Did caregiver follow your instructions?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>