care/force-app/main/default/objects/Survey_Feedback__c/fields/Did_we_resolve_your_issue__c.field-meta.xml
<CustomField>
    <fullName>Did_we_resolve_your_issue__c</fullName>
    <description>Did we resolve your issue?</description>
    <inlineHelpText>Did we resolve your issue?</inlineHelpText>
    <label>Did we resolve your issue?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>