care/force-app/main/default/objects/Survey_Feedback__c/fields/Did_you_hire_a_Care_com_caregiver__c.field-meta.xml
<CustomField>
    <fullName>Did_you_hire_a_Care_com_caregiver__c</fullName>
    <label>Did you hire a Care.com caregiver?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>