care/force-app/main/default/objects/Survey_Feedback__c/fields/Employer__c.field-meta.xml
<CustomField>
    <fullName>Employer__c</fullName>
    <description>Name of the members employer, added for SFORCE-2425 BUC Surveys</description>
    <label>Employer</label>
    <length>40</length>
    <type>Text</type>
</CustomField>