care/force-app/main/default/objects/Survey_Feedback__c/fields/Employer_Program__c.field-meta.xml
<CustomField>
    <fullName>Employer_Program__c</fullName>
    <formula>TEXT(Account__r.Employer_Program_Pick__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Employer Program</label>
    <type>Text</type>
</CustomField>