care/force-app/main/default/objects/Survey_Feedback__c/fields/Event__c.field-meta.xml
<CustomField>
    <fullName>Event__c</fullName>
    <complianceGroup>CCPA</complianceGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>WPS Event survey the survey is related to. Added for SFORCE-1774, synced w Clicktools.</description>
    <inlineHelpText>Please select the Event this survey is related to.</inlineHelpText>
    <label>Event</label>
    <referenceTo>Event__c</referenceTo>
    <relationshipLabel>Event Survey Feedbacks</relationshipLabel>
    <relationshipName>Event_Survey_Feedbacks</relationshipName>
    <type>Lookup</type>
</CustomField>