care/force-app/main/default/objects/Survey_Feedback__c/fields/Explain_your_rating__c.field-meta.xml
<CustomField>
    <fullName>Explain_your_rating__c</fullName>
    <complianceGroup>CCPA</complianceGroup>
    <description>added for SFORCE-2425 BUC Surveys</description>
    <inlineHelpText>Q: Please explain why you chose the rating above.</inlineHelpText>
    <label>Explain why you chose the rating above</label>
    <type>TextArea</type>
</CustomField>