care/force-app/main/default/objects/Survey_Feedback__c/fields/Favorable_Comments_Translated__c.field-meta.xml
<CustomField>
    <fullName>Favorable_Comments_Translated__c</fullName>
    <description>Text Translation of Agent experience Favorable</description>
    <label>Favorable Comments Translated</label>
    <length>255</length>
    <type>Text</type>
</CustomField>