care/force-app/main/default/objects/Survey_Feedback__c/fields/Feedback__c.field-meta.xml
<CustomField>
    <fullName>Feedback__c</fullName>
    <label>Feedback:</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>